# qtrocket

./: .gitignore  CMakeLists.txt  CNAME  Doxyfile  HELPWANTED  Makefile  QtRocket.cpp  QtRocket.h  QtRocket.ui  README.md  _config.yml  main.cpp  qmake_qmake_qm_files.qrc  qtrocket.pro  qtrocket.qrc
.github/workflows/: cmake-multi-platform.yml  ubuntu-latest-gcc13.yml  windows-latest.yml
_posts/: 2023-02-20-welcome-to-jekyll.markdown
data/: Aerotech.rse
docs/: qtrocketUML.xmi
gui/: AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  AnalysisWindow.cpp  AnalysisWindow.h  AnalysisWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RocketTreeView.cpp  RocketTreeView.h  SimOptionsWindow.cpp  SimOptionsWindow.h  SimOptionsWindow.ui  SimulationOptions.cpp  SimulationOptions.h  SimulationOptions.ui  ThrustCurveMotorSelector.cpp  ThrustCurveMotorSelector.h  ThrustCurveMotorSelector.ui  qcustomplot.cpp
model/: CMakeLists.txt  InertiaTensors.h  Motor.h  MotorCase.h  MotorModel.cpp  MotorModel.h  MotorModelDatabase.cpp  MotorModelDatabase.h  Part.cpp  Part.h  Propagatable.h  Rocket.cpp  Rocket.h  RocketModel.cpp  RocketModel.h  Stage.cpp  Stage.h  ThrustCurve.cpp  ThrustCurve.h  Thrustcurve.cpp  Thrustcurve.h
model/tests/: CMakeLists.txt  PartTests.cpp
sim/: Aero.h  AtmosphericModel.cpp  AtmosphericModel.h  CMakeLists.txt  ConstantAtmosphere.h  ConstantGravityModel.cpp  ConstantGravityModel.h  DESolver.h  Environment.h  GeoidModel.h  GravityModel.h  Propagator.cpp  Propagator.h  RK4Solver.cpp  RK4Solver.h  SimulationOptions.h  SphericalGeoidModel.cpp  SphericalGeoidModel.h  SphericalGravityModel.cpp  SphericalGravityModel.h  StateData.cpp  StateData.h  USStandardAtmosphere.cpp  USStandardAtmosphere.h  WindModel.cpp  WindModel.h
sim/tests/: CMakeLists.txt  USStandardAtmosphereTests.cpp
src/Utils/: CMakeLists.txt  CurlConnection.cpp  CurlConnection.h
src/Utils/math/: CMakeLists.txt  Constants.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/gui/images/: rocket16x16.xpm  rocket32x32.xpm  rocket64x64.xpm
src/model/: CMakeLists.txt  Motor.cpp  Motor.h  MotorCase.cpp  Thrustcurve.cpp  Thrustcurve.h
src/sim/: AtmosphericModel.h  CMakeLists.txt  GravityModel.cpp  SphericalGeoidModel.cpp  SphericalGeoidModel.h  SphericalGravityModel.h  USStandardAtmosphere.cpp  USStandardAtmosphere.h
src/sim/tests/: CMakeLists.txt  USStandardAtmosphereTests.cpp
src/utils/: BinMap.cpp  BinMap.h  CMakeLists.txt  CurlConnection.h
src/utils/math/: CMakeLists.txt  Constants.h
utils/: Bin.cpp  Bin.h  BinMap.cpp  BinMap.h  CMakeLists.txt  CurlConnection.cpp  CurlConnection.h  Logger.cpp  Logger.h  MotorModelDatabase.cpp  MotorModelDatabase.h  RSEDatabaseLoader.cpp  RSEDatabaseLoader.h  TSQueue.h  ThreadPool.cpp  ThreadPool.h  ThrustCurveAPI.cpp  ThrustCurveAPI.h  Triplet.h
utils/math/: Constants.h  MathTypes.h  Quaternion.cpp  Quaternion.h  UtilityMathFunctions.cpp  UtilityMathFunctions.h  Vector3.cpp  Vector3.h
